
$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.14-10 (opened August 21, 2008)

	* oecosimu: accepts now a vector of statistics and plain
	statistics instead of the list item statistics. This means that
	things like species richness for sites can be analysed with
	approprite simulation model (needs fine tuning, though).
	
	* ordiParseFormula: formula of the partial terms has the same
	environment as the general formula. Cures some tricky issues when
	the partial term of cca/rda/capscale model is updated within a
	function. (The environment() drives me crazy, says J.O.)
	
Version 1.14-9 (closed August 20, 2008)

	* closed concurrently with the release of vegan 1.13-2: changes up
	to this version may have been there.

	* adipart: new function to perform additive diversity partitioning
	with corresponding S3 methods.

	* tsallis: new function to calculate Tsallis-entropy, a scalable
	diversity index family

	* treedive: new functions for estimating functional diversity
	defined as the height of a dendrogram of species properties for a
	site (Petchey & Gaston). Still very preliminary.

	* plot.procrustes: could fail if two solutions were *exactly*
	*exactly* identical (noticed by Peter Solymos with wcmdscale
	example). 
	
Version 1.14-8 (closed August 10, 2008)

	* wcmdscale: new function to perform metric scaling
	(a.k.a. principal coordinates analysis) with weights for points.

	* ordiArgAbsorber: now knows about 'choices' and 'display' args
	of scores(). Reported by Michael Denslow.

	* orditkplot: plotting text labels was broken in the default case.
	Zooming works again. Plotting character (pch) is now better
	centred on the canvas, and the code was simplified.
	
Version 1.14-7 (closed July 30, 2008)

	* orditkplot: imitates now plotting character (argument
	pch). Zooming maintains graphical parameters (such as mar). Label
	selection shown by a rectangle, since label may already be
	red. Label family, size and font can be vectors.
	